--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-offline": "^3.2.7",
+    "gatsby-plugin-postcss": "^2.3.4",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-source-filesystem": "^2.3.8",
@@ -16,9 +18,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "tailwindcss": "^1.4.6",
+    "typeface-inter": "^3.12.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.0",
+    "postcss-import": "^12.0.1",
     "prettier": "2.0.5"
   },
   "keywords": [
