--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@phawk/react-clickoutside-component": "^1.1.0",
+    "@tailwindcss/ui": "^0.6.0",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-manifest": "^2.4.9",
@@ -20,7 +22,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "tailwindcss": "^1.4.6",
+    "tailwindcss": "^1.8.8",
     "typeface-inter": "^3.12.0"
   },
   "devDependencies": {
